docs/api/qiskit/0.19/qiskit.providers.aer.extensions.SnapshotDensityMatrix.mdx
---
title: SnapshotDensityMatrix (v0.19)
description: API reference for qiskit.providers.aer.extensions.SnapshotDensityMatrix in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.aer.extensions.SnapshotDensityMatrix
---

# SnapshotDensityMatrix

<Class id="qiskit.providers.aer.extensions.SnapshotDensityMatrix" isDedicatedPage={true} github="https://github.com/qiskit/qiskit-aer/tree/stable/0.5/qiskit/providers/aer/extensions/snapshot_density_matrix.py" signature="SnapshotDensityMatrix(label, num_qubits)" modifiers="class">
  Snapshot instruction for density matrix method of Qasm simulator.

  Create a density matrix state snapshot instruction.

  **Parameters**

  *   **label** (*str*) – the snapshot label.
  *   **num\_qubits** (*int*) – the number of qubits to snapshot.

  **Raises**

  **ExtensionError** – if snapshot is invalid.

  ## Attributes

  <span id="snapshotdensitymatrix-decompositions" />

  ### decompositions

  <Attribute id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="snapshotdensitymatrix-definition" />

  ### definition

  <Attribute id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="snapshotdensitymatrix-label" />

  ### label

  <Attribute id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.label">
    Return snapshot label
  </Attribute>

  <span id="snapshotdensitymatrix-params" />

  ### params

  <Attribute id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.params">
    return instruction params.
  </Attribute>

  <span id="snapshotdensitymatrix-snapshot-type" />

  ### snapshot\_type

  <Attribute id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.snapshot_type">
    Return snapshot type
  </Attribute>

  ## Methods

  <span id="snapshotdensitymatrix-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.add_decomposition" signature="SnapshotDensityMatrix.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="snapshotdensitymatrix-assemble" />

  ### assemble

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.assemble" signature="SnapshotDensityMatrix.assemble()">
    Assemble a QasmQobjInstruction
  </Function>

  <span id="snapshotdensitymatrix-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.broadcast_arguments" signature="SnapshotDensityMatrix.broadcast_arguments(qargs, cargs)">
    Validation of the arguments.

    **Parameters**

    *   **qargs** (*List*) – List of quantum bit arguments.
    *   **cargs** (*List*) – List of classical bit arguments.

    **Yields**

    *Tuple(List, List)* – A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="snapshotdensitymatrix-c-if" />

  ### c\_if

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.c_if" signature="SnapshotDensityMatrix.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="snapshotdensitymatrix-copy" />

  ### copy

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.copy" signature="SnapshotDensityMatrix.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotdensitymatrix-define-snapshot-register" />

  ### define\_snapshot\_register

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.define_snapshot_register" signature="SnapshotDensityMatrix.define_snapshot_register(circuit, label, qubits=None)" modifiers="static">
    Defines qubits to snapshot for all snapshot methods
  </Function>

  <span id="snapshotdensitymatrix-inverse" />

  ### inverse

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.inverse" signature="SnapshotDensityMatrix.inverse()">
    Special case. Return self.
  </Function>

  <span id="snapshotdensitymatrix-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.is_parameterized" signature="SnapshotDensityMatrix.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="snapshotdensitymatrix-mirror" />

  ### mirror

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.mirror" signature="SnapshotDensityMatrix.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="snapshotdensitymatrix-qasm" />

  ### qasm

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.qasm" signature="SnapshotDensityMatrix.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="snapshotdensitymatrix-repeat" />

  ### repeat

  <Function id="qiskit.providers.aer.extensions.SnapshotDensityMatrix.repeat" signature="SnapshotDensityMatrix.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>
</Class>

